# PhenoMCP

./: .fix_audit.py  .gitignore  .golangci.yml  .pre-commit-config.yaml  .tmp_engine_idx  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FUNCTIONAL_REQUIREMENTS.md  LICENSE  README.md  SECURITY.md  deny.toml  go.mod  justfile  package-lock.json  package.json  pre-commit-config.yaml  pyproject.toml  worklog.md
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cargo-audit.yml  cargo-deny.yml  cargo-machete.yml  cargo-semver-checks.yml  ci.yml  codeql-rust.yml  codeql.yml  journey-gate.yml  lint.yml  pages.yml  scorecard.yml  trufflehog.yml
bindings/csharp/src/: RealClient.cs
bindings/kotlin/src/main/kotlin/com/phenotype/mcp/: KtorClient.kt
bindings/swift/Sources/PhenoMCP/: RealClient.swift
crates/pheno-meilisearch/: Cargo.toml
crates/pheno-meilisearch/src/: lib.rs
crates/pheno-ports/: Cargo.toml
crates/pheno-ports/src/: doubles.rs  lib.rs
crates/pheno-qdrant/: Cargo.toml
crates/pheno-qdrant/src/: lib.rs
crates/phenotype-surrealdb/: Cargo.toml
crates/phenotype-surrealdb/src/: lib.rs
docs/: index.md
docs/.vitepress/: config.mts
docs/adr/: ADR-001.md  ADR-002.md  ADR-003.md  ADR-004.md  ADR-005.md
docs/docs/phenomcp/: clients.md  index.md  observability.md  security.md  server.md  transports.md
docs/journeys/manifests/: main-flow.json
docs/operations/: journey-traceability.md
docs/reference/: SPECS_INDEX.md  index.md
docs/requirements/: phenomcp-frnfr.md
docs/research/: SOTA-AI-SDKs.md  SOTA-MCP.md  SOTA-PhenoMCP.md  index.md
docs/sessions/20260429-sladge-badge/: 00_SESSION_OVERVIEW.md  01_RESEARCH.md  02_SPECIFICATIONS.md  03_DAG_WBS.md  04_IMPLEMENTATION_STRATEGY.md  05_KNOWN_ISSUES.md
docs/worklogs/: README.md  index.md
integration-tests/: run-all.sh  test-server.rs
python/src/pheno_mcp/: __init__.py  __main__.py  client.py  models.py  server.py  transport.py
python/src/pheno_mcp/tools/: __init__.py  agent_tools.py  governance_tools.py  knowledge_tools.py  policy_tools.py  session_tools.py  workflow_tools.py
python/tests/: __init__.py  conftest.py  test_agent_tools.py  test_client.py  test_client_connected.py  test_configured_server.py  test_governance_tools.py  test_init.py  test_integration.py  test_knowledge_tools.py  test_models.py  test_models_edge_cases.py  test_policy_tools.py  test_server.py  test_server_comprehensive.py  test_session_tools.py  test_transport.py  test_workflow_tools.py
src/: main.rs
tests/: __init__.py  test_client.py  test_crate_interfaces.py  test_crates.py  test_metadata.py  test_models.py  test_package_config.py  test_package_init.py  test_project_structure.py  test_server.py
