[package]
name = "pheno-mcp"
version = "0.1.0"
edition = "2024"
description = "PhenoMCP - Model Context Protocol"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.44", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"

[[bin]]
name = "pheno-mcp"
path = "src/main.rs"

[workspace]
members = [
  "crates/pheno-meilisearch",
  "crates/pheno-qdrant",
  "crates/phenotype-surrealdb"
]
resolver = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
