[package]
name = "pheno-mcp"
version = "0.1.0"
edition = "2024"
description = "PhenoMCP - Model Context Protocol"
license = "MIT OR Apache-2.0"

[[bin]]
name = "pheno-mcp"
path = "src/main.rs"

[workspace]
[workspace.package]

rust-version = "1.75"
members = ["crates/*"]
resolver = "3"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
opt-level = 3
