[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["python/src/pheno_mcp"]

[project]
name = "pheno-mcp"
version = "0.1.0"
requires-python = ">=3.14"
license = "MIT OR Apache-2.0"
dependencies = [
    "httpx>=0.27",
    "mcp>=1.27",
    "pytest-asyncio>=0.23",
]

[project.scripts]
pheno-mcp = "pheno_mcp.__main__:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["python/tests"]

[tool.mypy]
python_version = "3.14"
strict = false
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
