[package]
name = "pheno-meilisearch"
version = "0.1.0"
edition = "2024"
description = "Meilisearch client for Pheno"

[dependencies]
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
