[package]
name = "pheno-ports"
version = "0.1.0"
edition = "2024"
description = "Hexagonal port traits for PhenoMCP infrastructure"

[dependencies]
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tokio = { version = "1.44", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.44", features = ["full", "test-util"] }
tokio-test = "0.4"
