[package]
name = "pheno-qdrant"
version = "0.1.0"
edition = "2024"
description = "Qdrant SearchPort adapter for PhenoMCP"

[dependencies]
pheno-ports = { path = "../pheno-ports" }
async-trait = "0.1"
tokio = { version = "1.44", features = ["full"] }
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
tokio-test = "0.4"
